<resources>
    <string name="app_name">eToko</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="colon">:</string>

    <string name="btn_sell">Jual</string>
    <string name="btn_add">Tambah</string>
    <string name="btn_save">Simpan</string>
    <string name="btn_close">Tutup</string>
    <string name="btn_cancel">Batal</string>
    <string name="btn_detail">Detail</string>
    <string name="btn_delete">Hapus</string>
    <string name="btn_add_to_chart">Tambah ke keranjang</string>

    <string name="msg_product_has_saved">Data produk berhasil disimpan.</string>
    <string name="msg_press_once_again_to_close">Tekan sekali lagi untuk keluar.</string>
    <string name="msg_cannot_empty">Harus diisi.</string>
    <string name="msg_ask_to_delete_product">Hapus product ini? \n\n</string>

    <string name="title_pcs">PCS</string>
    <string name="title_rupiah">Rp. </string>
    <string name="title_product_name">Nama Produk</string>
    <string name="title_price">Harga</string>
    <string name="title_qty">Jumlah</string>
    <string name="title_piece_product">Satuan</string>
    <string name="title_product_code">Kode Produk</string>
    <string name="title_capital_price">Harga Modal</string>
    <string name="title_sell_price">Harga Jual</string>
    <string name="title_product_stock">Jumlah Stock</string>
    <string name="title_list_product">Lihat List Produk</string>
    <string name="title_list_all_product">List Produk</string>
    <string name="title_add_product">Tambah Produk Baru</string>
    <string name="title_error_occured">Ada Kesalahan!</string>
    <string name="title_error_detail">Detail Kesalahan</string>
</resources>
