<?xml version="1.0" encoding="utf-8"?>
<com.ab.project.kasirku.Activity.ProductList.ProductListCard xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/default_margin">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/imgProduct"
            android:src="@drawable/ic_product_image"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/margin_15">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Ice Cream"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryText"
                android:gravity="center"
                android:id="@+id/tvProductName"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="3.5"
                    android:layout_height="wrap_content"
                    android:text="@string/title_product_stock"
                    android:textColor="@color/colorPrimaryText"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:text="@string/colon"
                    android:textColor="@color/colorPrimaryText"/>

                <TextView
                    android:id="@+id/tvStockProduct"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="6"
                    android:textColor="@color/colorPrimaryText"
                    tools:text="jumlah stock" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="3.5"
                    android:layout_height="wrap_content"
                    android:text="@string/title_capital_price"
                    android:textColor="@color/colorPrimaryText"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:text="@string/colon"
                    android:textColor="@color/colorPrimaryText"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:layout_height="wrap_content"
                    tools:text="harga modal"
                    android:id="@+id/tvCapitalPrice"
                    android:textColor="@color/colorPrimaryText"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="3.5"
                    android:layout_height="wrap_content"
                    android:text="@string/title_sell_price"
                    android:textColor="@color/colorPrimaryText"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:text="@string/colon"
                    android:textColor="@color/colorPrimaryText"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:layout_height="wrap_content"
                    tools:text="harga jual"
                    android:id="@+id/tvSellingPrice"
                    android:textColor="@color/colorPrimaryText"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</com.ab.project.kasirku.Activity.ProductList.ProductListCard>