<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.selling_product.SellingProductActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tbMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0.8dp"
            android:background="@color/mainBackground">
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginStart="@dimen/margin_15"
        android:layout_marginEnd="@dimen/margin_15">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_product_name"
                android:textColor="@color/colorPrimary"
                android:layout_marginBottom="3dp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@drawable/corner_edge"
                app:cardBackgroundColor="@color/colorPrimary"
                android:layout_marginBottom="3dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@color/mainBackground"
                    android:layout_margin="1dp"
                    android:weightSum="10">

                    <AutoCompleteTextView
                        android:id="@+id/etProductName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="9.5"
                        android:textColor="@color/colorSecondaryText"
                        android:completionThreshold="1"
                        android:maxLines="1"
                        android:foregroundTint="@color/mainBackground"
                        android:backgroundTint="@color/mainBackground"
                        android:popupBackground="@color/mainBackground"/>

                    <ImageButton
                        android:id="@+id/imgSearch"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center"
                        android:background="@color/mainBackground"
                        android:tint="@color/colorPrimary"
                        android:src="@drawable/ic_search"
                        android:layout_weight="0.5"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="3dp"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6.5"
                    android:text="@string/title_sell_price"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/title_piece_product"
                    android:layout_weight="2"
                    android:textColor="@color/colorPrimary"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="7"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/title_text_size"
                        app:cardBackgroundColor="@color/colorPrimary">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_margin="1dp"
                            android:gravity="center"
                            android:background="@color/mainBackground">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/margin_3"
                                android:layout_marginEnd="@dimen/margin_3"
                                android:text="@string/title_rupiah"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:gravity="center|start"
                                tools:text="1.000.000"
                                android:foregroundTint="@color/mainBackground"
                                android:backgroundTint="@color/mainBackground"
                                android:id="@+id/etSellingPrice"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="2.6"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="@color/colorPrimary"
                        android:layout_marginEnd="5dp">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_margin="1dp"
                            android:background="@color/mainBackground">
                            <EditText
                                android:id="@+id/etPcs"
                                android:backgroundTint="@color/mainBackground"
                                android:foregroundTint="@color/mainBackground"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:gravity="center_vertical"
                                android:textColor="@color/colorSecondaryText"
                                android:inputType="number"
                                android:digits="0123456789"/>
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/title_pcs"
                    android:textColor="@color/colorPrimary"/>

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="4dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    app:cardCornerRadius="4dp"
                    android:backgroundTint="@color/mainBackground"
                    android:id="@+id/btnAddToChart">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/ic_add_chart"
                            android:layout_gravity="center"
                            android:layout_marginEnd="5dp"
                            android:tint="@color/colorPrimary"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:textColor="@color/colorPrimary"
                            android:text="@string/btn_add_to_chart"
                            android:gravity="center"
                            android:textStyle="bold"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="10"
            android:orientation="vertical">
            <com.ai.project.eToko.component.AiRecyclerView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="8.5"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin"
                android:id="@+id/rvListProduct"
                android:background="@color/colorTransparentWhite">
            </com.ai.project.eToko.component.AiRecyclerView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                app:cardCornerRadius="4dp"
                android:layout_marginBottom="@dimen/default_margin"
                app:cardBackgroundColor="@color/colorPrimary">
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardCornerRadius="4dp"
                    app:cardBackgroundColor="@color/mainBackground"
                    android:id="@+id/btnSellProduct"
                    android:layout_margin="2dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/ic_sell"
                            android:tint="@color/colorPrimary"
                            android:layout_marginEnd="5dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:text="@string/btn_sell"
                            android:gravity="center"
                            android:background="@color/mainBackground"
                            android:layout_margin="2dp"
                            android:textAllCaps="true"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>